# legato

./: .gitignore  Cargo.toml  README.md  diff.txt  flake.nix
crates/: Cargo.toml
crates/legato-core/: Cargo.toml
crates/legato-core/examples/: delay.rs  fir.rs  oversample.rs  sweep.rs
crates/legato-core/src/: lib.rs
crates/legato-core/src/application/: mod.rs
crates/legato-core/src/backend/: out.rs
crates/legato-core/src/engine/: audio_context.rs  builder.rs  graph.rs  node.rs  port.rs  runtime.rs
crates/legato-core/src/nodes/audio/: audio_ops.rs  delay.rs  mixer.rs  mod.rs  resample.rs  sampler.rs  sine.rs  stereo.rs  subgraph.rs
crates/legato-core/src/nodes/audio/filters/: fir.rs  mod.rs
crates/legato-core/src/nodes/utils/: ffmpeg.rs  mod.rs  port_utils.rs  ring.rs
crates/legato-dsl/: Cargo.toml  example.legato
crates/legato-dsl/examples/: parse_file.rs
crates/legato-dsl/src/: ast.rs  grammar.pest  ir.rs  lib.rs  parse.rs
crates/legato-dsl/src/ir/: mod.rs  params.rs  registry.rs
crates/legato-dsl/tests/: ast.rs  parse_grammar.rs
crates/src/: lib.rs
docs/: content.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
examples/: arp.rs  chaining_graphs.rs  delay.rs  fir.rs  oversample.rs  samples.rs  sin.rs  sweep.rs
examples/fm/: Cargo.toml
examples/reverb/: Cargo.toml
legato/legato-dsl/: example.legato
mini-graph/: Cargo.toml
mini-graph-macros/: Cargo.toml
mini-graph-macros/src/: lib.rs
mini-graph/src/: lib.rs
mini-graph/tests/: macros.rs
scripts/: README.md  filter_design.py  pyproject.toml  spectrogram.py
src/: lib.rs  main.rs
(+61 files in other folders)
