[package]
name = "legato"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std     = []

[dependencies]
cpal = { version = "0.16.0", features = ["jack"] }
assert_no_alloc = "1.1.2"
hashbrown = { version = "0.15.4", features = ["inline-more"] }
indexmap = "2.10.0"
heapless = "0.8.0"
portable-atomic = { version = "1.11.1", features = ["float"] }
arc-swap = "1.7.1"
slotmap = "1.0.7"
typenum = "1.18.0"
generic-array = "1.2.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
