[package]
name = "legato"
version = "0.0.5"
edition = "2024"

[workspace]
members = ["legato-core", "legato-dsl"]
resolver = "3"

[features]
default = ["core","dsl"]
core = ["dep:legato-core"]
dsl = ["dep:legato-dsl"]

[dependencies]
legato-core = { path = "legato-core", optional = true }
legato-dsl  = { path = "legato-dsl", optional = true }